@@ -3,9 +3,10 @@
 var chrome = chrome || {};
 
 chrome.news = [
+	{date: '24 Feb 2009', text: 'Pretty URLs 0.9.1 released'},
 	{date: '12 Nov 2008', text: 'Pretty URLs 0.9 released'}	
 ];
 
-chrome.latestVersion = '0.9';
+chrome.latestVersion = '0.9.1';
 chrome.upgradeFrom = '';
 chrome.upgradeUrl = '';
